--- a/fonts.css
+++ b/fonts.css
@@ -2,6 +2,10 @@ body {
 	font-family: 'Lucida Sans Unicode'; 
 }
 
+h1 {
+	font-family: 'Roboto', sans-serif;
+}
+
 p {
 	line-height: 2;
 	letter-spacing: 1;
